(data_only_dirs sandbox)

(rule
 (deps (source_tree sandbox))
 (targets libfoo_stubs.a)
 (action (progn
          (chdir sandbox (run ./build.sh))
          (copy sandbox/libfoo.a libfoo_stubs.a))))

(library
 (name bar)
 (modules )
 (self_build_stubs_archive (foo)))

(library
    (name libbar)
    (wrapped false)
    (modules )
    (c_names c_file)
    (libraries  bar))

(executable
    (name main)
    (modules main)
    (libraries libbar))
